Mon Feb  9 23:04:27 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: rename level_to_int to iplevel_to_int.
	  rename intern_level to intern_iplevel.

	* ext/socket/constants.c: follow the renaming.

	* ext/socket/option.c: ditto.

	* ext/socket/ancdata.c: ditto.

Mon Feb  9 22:52:13 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.
	  (rb_sock_getfamily): declared.

	* ext/socket/constants.c (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.

	* ext/socket/init.c (rb_sock_getfamily): defined.

	* ext/socket/option.c (sockopt_initialize): give family for level_arg
	  and optname_arg.
	  (sockopt_s_int): ditto.

	* ext/socket/basicsocket.c (bsock_setsockopt): ditto.
	  (bsock_getsockopt): ditto.

	* ext/socket/ancdata.c (ancillary_initialize): ditto.
	  (ancillary_s_int): ditto.
	  (ancillary_cmsg_is_p): ditto.
	  (bsock_sendmsg_internal): ditto.
	  (bsock_recvmsg_internal): use rb_sock_getfamily.

Mon Feb  9 21:48:59 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_inspect): show address family.

Mon Feb  9 20:19:36 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getsockname): use sockaddr_storage.

Mon Feb  9 20:11:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (load_conv_function51932): fixed for the
	  case IMultiLanguage is not available.  [ruby-dev:37950]

Mon Feb  9 20:04:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_int): return 1/0 on success/failure.
	  (inspect_uint): ditto.
	  (inspect_linger): ditto.
	  (inspect_socktype): ditto.
	  (inspect_timeval): ditto.
	  (inspect_peercred): ditto.
	  (inspect_local_peercred): ditto.
	  (sockopt_inspect): refactored.

Mon Feb  9 20:00:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: more constants for Solaris.
