@@ -242,7 +242,8 @@ end
 def_name_to_int("family_to_int", /\A(AF_|PF_)/, "AF_")
 def_name_to_int("socktype_to_int", /\ASOCK_/, "SOCK_")
 def_name_to_int("ipproto_to_int", /\AIPPROTO_/, "IPPROTO_")
-def_name_to_int("iplevel_to_int", /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
+def_name_to_int("unknown_level_to_int", /\ASOL_SOCKET\z/, "SOL_")
+def_name_to_int("ip_level_to_int", /\A(SOL_SOCKET\z|IPPROTO_)/, /\A(SOL_|IPPROTO_)/)
 def_name_to_int("so_optname_to_int", /\ASO_/, "SO_")
 def_name_to_int("ip_optname_to_int", /\AIP_/, "IP_")
 def_name_to_int("ipv6_optname_to_int", /\AIPV6_/, "IPV6_", "IPPROTO_IPV6")
